--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@ html, body, #root, .app, .home {
   height: 100%
 }
 
+#root {
+  height: 100vh;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', Oxygen,
